syntax = "proto3";
package desmos.tokenfactory.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/desmos-labs/desmos/v6/x/tokenfactory/types";

// DenomAuthorityMetadata contains the metadata for a single token denom.
message DenomAuthorityMetadata {
  option (gogoproto.equal) = true;

  // Admin of the denomination.
  // Can be empty for no admin, or a valid Desmos address
  string admin = 1 [
    (gogoproto.moretags) = "yaml:\"admin\"",
    (cosmos_proto.scalar) = "cosmos.AddressString"
  ];
}
